--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ html {
     color: #ffffff;
 }
 
+body {
+    overflow-x: hidden;
+}
 main {
     margin: 0 auto;
     max-width: 1440px;
@@ -73,6 +76,25 @@ h1, h2, h3, h4, h5{
     display: block;
 }
 
+.left-hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.right-hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(100%);
+    transition: all 1s;
+}
+
+.display {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
 .star {
     display: block;
     width: 14px; 
@@ -328,12 +350,11 @@ color: #ffffff;
         padding: 2.5rem 10rem;
         border-bottom: var(--section-border);
 
-
         .block_content h1{
             font-size: 3.2rem;
             font-weight: 700;
             line-height: 42.56px; 
-            padding: 25px 10px 10px 10px; 
+            padding: 25px 10px 10px 10px;
         }
 
         .block_content span {
@@ -357,7 +378,7 @@ color: #ffffff;
        
         .block-img {
             position: relative;
-            flex:1 1 42rem;
+            flex: 1 1 42rem;
 
             .star {
                 position: absolute;
@@ -393,10 +414,12 @@ color: #ffffff;
             
         }
       } */
+.block3 {
     
-    .block3 button{
-        margin: 30px 10px 60px 10px;
-    }
+        & button {
+                margin: 30px 10px 60px 10px;
+            }
+}
 }
 
 /* faq section */
@@ -425,6 +448,7 @@ color: #ffffff;
     }
 
     .faq_items p {
+        border-width: 10px;
         padding: 15px 0;
         border-bottom: 1px solid var(--purplish);
         background: url();
@@ -819,14 +843,6 @@ word-wrap: break-word */
         margin-inline: auto;
     }
 
-        .block .block1 {
-            background: red;
-    
-            .arrow {
-                width: 20px;
-    
-            }
-        }
     .faq {
         flex-direction: column;
         text-align: center;
